src/tests/__snapshots__/diagnosticShowcase.spec.ts.snap
// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Diagnostic Showcase Dispatch.es should render the same report every time 1`] = `
"[unknown-method]
Error: No Method named 'lenght' for this value
    ╭─┤ Dispatch.es:13:31 │
    │
 13 │     constant length = "essence"::lenght()
    │                       ────┬────  ───┬──  
    │                           ╰─────────│──── this is a String
    │                                     │    
    │                                     ╰──── no Method of this name
    │ 
    │ Help: Did you mean 'length'?
    │ 
    │ Note: Searched Namespaces 'String', 'Optional'.
────╯

[no-matching-overload]
Error: No overload of 'prepend' accepts these Arguments
    ╭─┤ Dispatch.es:16:19 │
    │
 16 │     constant piece = "essence"::prepend()
    │                      ──────────┬─────────  
    │                                ╰─────────── this call passes 0 Arguments
    │ 
    │ Note: 'String::prepend' takes 1 Argument: Parameter 1 is String.
────╯

[unknown-method]
Error: No Method named 'describe' for this value
    ╭─┤ Dispatch.es:19:32 │
    │
 19 │     constant nowhere = { x = 1 }::describe()
    │                        ────┬────  ────┬───  
    │                            ╰──────────│───── this is a { x: Integer }
    │                                       │     
    │                                       ╰───── no Method of this name
    │ 
    │ Note: Searched Namespaces 'Optional', 'Record'.
────╯

[unknown-name]
Error: 'nmae' is not declared
    ╭─┤ Dispatch.es:23:19 │
    │
 23 │     constant shout = nmae
    │                      ──┬─  
    │                        ╰─── no such Variable or Constant
    │ 
    │ Help: Did you mean 'name'?
────╯

[unknown-member]
Error: { x: Integer, y: Integer } has no member 'z'
    ╭─┤ Dispatch.es:27:25 │
    │
 27 │     constant depth = point.z
    │                            ▲  
    │                            ╰── no such member
    │ 
    │ Note: { x: Integer, y: Integer } has 'x', 'y'.
────╯
"
`;

exports[`Diagnostic Showcase Match.es should render the same report every time 1`] = `
"[missing-case]
Error: This Match Expression does not handle every Case
    ╭─┤ Match.es:21:20 │
    │
 21 │     constant action = match signal -> String {
    │                             ───┬──  
    │                                ╰──── this is a Signal
    │ 
    │ Help: Add 'case Signal#Amber', 'case Signal#Green', or a 'case _' that covers the rest.
    │ 
    │ Note: Unhandled: 'Signal#Amber', 'Signal#Green'.
────╯

[unreachable-case]
Warning: This Case can never match
    ╭─┤ Match.es:31:8 │
    │
 28 │     constant described = match other -> String {
    │                                ──┬──  
    │                                  ╰──── this is an Integer | Nothing
    │ 
 31 │        case String { <- "never" }
    │             ───┬──  
    │                ╰──── String is not a member of the matched Union
────╯

[match-on-non-union]
Error: Match Expressions require a Union Type
    ╭─┤ Match.es:35:24 │
    │
 35 │     constant only = match "essence" -> String {
    │                           ────┬────  
    │                               ╰────── this is a String
    │ 
    │ Note: Matching a Type with only one possible shape has only one outcome.
────╯
"
`;

exports[`Diagnostic Showcase Types.es should render the same report every time 1`] = `
"[assignment-type-mismatch]
Error: This value does not fit Variable 'count'
    ╭─┤ Types.es:15:10 │
    │
 13 │     variable count = 0
    │              ──┬──  
    │                ╰──── declared as Integer here
    │ 
 15 │     count = "ten"
    │             ──┬──  
    │               ╰──── this is a String
────╯

[assignment-type-mismatch]
Error: This value does not fit the declared Type of Constant 'label'
    ╭─┤ Types.es:19:27 │
    │
 19 │     constant label: String = 42
    │                              ─┐  
    │                               ╰── this is an Integer
    │ 
    │ Note: 'label' is declared as String.
────╯

[argument-count-mismatch]
Error: This call passes the wrong number of Arguments
    ╭─┤ Types.es:26:22 │
    │
 26 │     constant greeting = greet("World")
    │                         ───────┬──────  
    │                                ╰──────── passes 1 Argument
    │ 
    │ Note: The signature takes 2 Arguments: Parameter 1 is String, Parameter 'times' is Integer.
────╯

[argument-type-mismatch]
Error: This Argument does not fit Parameter 1
    ╭─┤ Types.es:27:25 │
    │
 27 │     constant shout = greet(1, times "twice")
    │                            ▲  
    │                            ╰── this is an Integer
    │ 
    │ Note: Parameter 1 is String.
────╯

[argument-type-mismatch]
Error: This Argument does not fit Parameter 'times'
    ╭─┤ Types.es:27:34 │
    │
 27 │     constant shout = greet(1, times "twice")
    │                                     ───┬───  
    │                                        ╰───── this is a String
    │ 
    │ Note: Parameter 'times' is Integer.
────╯
"
`;
